--- a/main.css
+++ b/main.css
@@ -272,7 +272,7 @@ main h5 {
 	cursor: pointer;
 	border: 2px solid rgb(29, 30, 34);
 	margin-top: 20px;
-  border-radius: 20px;
+  border-radius: 60px;
 }
 
 .cta-btns button:hover {
@@ -401,7 +401,8 @@ main h5 {
 	cursor: pointer;
 	border: 2px solid black;
 	margin: 5px 0;
-	font-weight: 500
+	font-weight: 500;
+  border-radius: 60px;
 }
 
 .links button:hover {
@@ -719,8 +720,5 @@ footer {
 	}
 	.contact-text {
 		font-size: 25px
-	}
-	.link button{
-		border-radius: 20 px;
 	}
 }
